exam_apps/app1/eks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: prometheus.odeybright.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  name: http
    - host: grafana.odeybright.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: service
    - host: sockapp.odeybright.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sockapp
                port:
                  name: front-end
    - host: app.odeybright.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exam-service
                port:
                  name: http
  tls:
    - hosts:
        - project.odeybright.me
        - prometheus.odeybright.me
        - grafana.odeybright.me
        - sockapp.odeybright.me
        - app.odeybright.me
      secretName: apps-odeybright
